--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -500,10 +500,10 @@ There are currently 3 provided widget types:
 - Unlinked references :: View nodes that contain text that match the nodes
   title/alias but are not linked
 
-To configure what sections are displayed in the buffer, set ~org-roam-mode-sections~.
+To configure what sections are displayed in the buffer, set ~org-roam-mode-section-functions~.
 
 #+begin_src emacs-lisp
-  (setq org-roam-mode-sections
+  (setq org-roam-mode-section-functions
         (list #'org-roam-backlinks-section
               #'org-roam-reflinks-section
               ;; #'org-roam-unlinked-references-section
