--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -798,10 +798,10 @@ There are currently 3 provided widget types:
 title/alias but are not linked
 @end itemize
 
-To configure what sections are displayed in the buffer, set @code{org-roam-mode-sections}.
+To configure what sections are displayed in the buffer, set @code{org-roam-mode-section-functions}.
 
 @lisp
-(setq org-roam-mode-sections
+(setq org-roam-mode-section-functions
       (list #'org-roam-backlinks-section
             #'org-roam-reflinks-section
             ;; #'org-roam-unlinked-references-section
