Mention magit-section as dependency in install from source

--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -247,6 +247,7 @@ dependencies that it requires. These include:
 - org
 - emacsql
 - emacsql-sqlite
+- magit-section
 
 You can install this manually as well, or get the latest version from MELPA. You
 may wish to use [[https://github.com/jwiegley/use-package][use-package]], [[https://github.com/raxod502/straight.el][straight.el]] to help manage this.
